--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 
-@media (min-width: 0px) and (max-width: 600px) {
+@media (min-width: 0px) and (max-width: 445px) {
 
   body {
     margin: 0px;
@@ -9,21 +9,22 @@
 
   #container1{
     display: grid;
-    grid-template-rows: 10% 80% 10%;
+    grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
   #section{
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: 5% 1fr 5%;
+    grid-template-columns: 1fr 94% 1fr;
+    height: 80vh;
   }
 
   #container2{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display: grid;
-    grid-template-rows: 25% 75%;
+    grid-template-rows: 15% 70% 15%;
     grid-template-columns: 100%;
     grid-gap: .3rem;
     height: 80vh;
@@ -34,35 +35,37 @@
 
   #solutionContainer{
     display: grid;
-    grid-template-rows: 22% 46% 22%;
+    grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
   #solutionBox{
-    grid-row: 2 / span 1;
+    grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin: 1rem;
     font-size: 20px;
-    margin-left: 10%;
+    margin-left: 2%; 
     text-align: center;
     background-color: black;
     border: 2px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
-    padding: 2rem;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 17px;
+    max-width:92%;
+    color:white;
   }
 
   #buttonContainer{
     display:grid;
     grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1.5rem;
+    grid-gap: .5rem;
   }
 
   #button1{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -76,7 +79,7 @@
   #button2{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -87,7 +90,7 @@
   #button3{
     grid-row: 1 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -98,7 +101,7 @@
   #button4{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -110,7 +113,7 @@
   #button5{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -121,7 +124,7 @@
   #button6{
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -132,7 +135,7 @@
   #plus{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -143,7 +146,7 @@
   #minus{
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 50px;
     background-color: black;
     color: white;
@@ -154,7 +157,7 @@
   #multiply{
     grid-row: 3 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -165,7 +168,7 @@
   #divide{
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -176,7 +179,7 @@
   #openBracket{
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -187,202 +190,39 @@
   #closeBracket{
     grid-row: 4 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
     border: 2px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
   } 
-  
-  /* body {
-    margin: 0px;
-    padding: 0px;
-    background-color: black;
-  }
 
-  #container1{
+  #submitContainer{
     display: grid;
-    grid-template-rows: 10% 80% 10%;
-    grid-template-columns: 100%;
-    height: 100vh;
-  }
-
-  #container2{
-    display: grid;
-    grid-template-rows: 25% 75%;
-    grid-template-columns: 100%;
-    grid-gap: .3rem;
-    height: 80vh;
-    width: 95%;
-  }
-
-  #solutionContainer{
-    display: grid;
-    grid-template-rows: 22% 46% 22%;
+    grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
-  #solutionBox{
-    grid-row: 2 / span 1;
+  #enterButton{
+    grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin: 1rem;
-    font-size: 70px;
+    font-size: 20px;
+    margin-left: 2%; 
     text-align: center;
-    margin-left: 60px;
-    background-color: black;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
+    background-color: rgba(90, 90, 90, 0.819);
+    border: 2px solid rgba(90, 90, 90, 0.819);
+    border-radius: 6px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-left: 17px;
+    max-width:94%;
+    color:white;
   }
-
-  #buttonContainer{
-    display:grid;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1rem;
-    margin-left: 50px;
-  }
-
-  #button1{
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: rgba(79, 79, 79, 0.819);
-    color: white; 
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-
-  }
-
-  #button2{
-    grid-row: 1 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #button3{
-    grid-row: 1 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #button4{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-
-  }
-
-  #button5{
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #button6{
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #plus{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 120px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #minus{
-    grid-row: 3 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 160px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #multiply{
-    grid-row: 3 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 110px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #divide{
-    grid-row: 4 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 120px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #openBracket{
-    grid-row: 4 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 90px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #closeBracket{
-    grid-row: 4 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 90px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }  */
 
 }
 
-@media (min-width: 601px) {
+@media (min-width: 446px) {
 
   body {
     margin: 0px;
@@ -392,7 +232,7 @@
 
   #container1{
     display: grid;
-    grid-template-rows: 10% 80% 10%;
+    grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
@@ -407,7 +247,7 @@
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display: grid;
-    grid-template-rows: 25% 75%;
+    grid-template-rows: 15% 70% 15%;
     grid-template-columns: 100%;
     /* grid-gap: .3rem; */
     height: 85vh;
@@ -418,35 +258,36 @@
 
   #solutionContainer{
     display: grid;
-    grid-template-rows: 22% 46% 22%;
+    grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
   #solutionBox{
-    grid-row: 2 / span 1;
+    grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin: 1rem;
+    /* margin: 1rem; */
     font-size: 20px;
-    margin-left: 7%;
     text-align: center;
     background-color: black;
     border: 2px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
-    padding: 2rem;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 12px;
+    max-width:90%;
   }
 
   #buttonContainer{
     display:grid;
     grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1.5rem;
+    /* grid-gap: .5rem; */
   }
 
   #button1{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -460,7 +301,7 @@
   #button2{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -471,7 +312,7 @@
   #button3{
     grid-row: 1 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -482,7 +323,7 @@
   #button4{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -494,7 +335,7 @@
   #button5{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -505,7 +346,7 @@
   #button6{
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 25px;
     background-color: black;
     color: white;
@@ -515,7 +356,7 @@
   #plus{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -526,7 +367,7 @@
   #minus{
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 50px;
     background-color: black;
     color: white;
@@ -537,7 +378,7 @@
   #multiply{
     grid-row: 3 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -548,7 +389,7 @@
   #divide{
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -559,7 +400,7 @@
   #openBracket{
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -570,12 +411,34 @@
   #closeBracket{
     grid-row: 4 / span 1;
     grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
+    margin: 1rem;
     font-size: 30px;
     background-color: black;
     color: white;
     border: 2px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
   } 
+
+  #submitContainer{
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 100%;
+  }
+
+  #enterButton{
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+    font-size: 20px;
+    margin-left: 2%; 
+    text-align: center;
+    background-color: rgba(90, 90, 90, 0.819);
+    border: 2px solid rgba(90, 90, 90, 0.819);
+    border-radius: 6px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-left: 19px;
+    max-width:91%;
+    color:white;
+  }
 
 }
