Added a logout button on the navbar and added a some CSS to it.

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -46,6 +46,10 @@ nav a {
     float: right;
 }
 
+#logoutButton{
+    float:right;
+}
+
 nav a:hover {
     background-color: grey;
     color: aliceblue;
