--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,11 @@
     grid-template-columns: 100%;
     height: 100vh;
   }
+
+  #navbar{
+    grid-row: 1 / span 1;
+  }
+
   #section{
     display: grid;
     grid-template-rows: 100%;
@@ -235,6 +240,11 @@
     grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
     height: 100vh;
+  }
+
+  #navbar{
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
   }
 
   #section{
