--- a/2800 web/public/css/adminDash.css
+++ b/2800 web/public/css/adminDash.css
@@ -15,7 +15,7 @@
 
   #container2{
     display: grid;
-    grid-template-rows: 5% 20% 75%;
+    grid-template-rows: 5% 47% 47%;
     grid-template-columns: 7% 94% 2%;
     height: 100vh;
   }
@@ -23,19 +23,23 @@
   #search{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
+  }
+
+  #adminDash{
     display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 50% 50%;
+    grid-template-rows: 33% 33% 33%;
+    grid-template-columns: 100%;
+    height: 45vh;
   }
 
   #searchBar{
     grid-row: 1 / span 1;
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 1;
     width: 90%;
     justify-self: center;
-    margin-bottom: .5rem;
-    margin-top: .5rem;
-    margin-right: 10%;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    margin-right: 9%;
     background-color: rgb(196, 196, 196);
     border: 2px solid white;
     border-radius: 6px;
@@ -47,7 +51,7 @@
   #searchUsers{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    width: 80%;
+    width: 90%;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
     border: 2px solid white;
@@ -55,21 +59,22 @@
     color: white;
     justify-self: center;
     margin-top: 1.5rem;
-    margin-right: 2.5rem;
+    margin-bottom: 3rem;
+    margin-right: 10%;
   }
 
-  #displayUsers{
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    width: 80%;
-    justify-self: center;
+  #showDB{
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 1;
+    width: 90%;
     font-size: 20px;
     background-color: rgb(94, 155, 169);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
-    margin-top: 1.5rem;
-    margin-right: 2rem;
+    justify-self: center;
+    margin-bottom: 4.5rem;
+    margin-right: 10%;
   }
 
 }
@@ -99,54 +104,53 @@
   #search{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    margin-top: 5%;
-    margin-left: 10%;
+  }
+
+  #adminDash{
     display: grid;
     grid-template-rows: 50% 50%;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 70% 30%;
+    grid-gap: 1rem;
+    height: 55vh;
   }
 
   #searchBar{
     grid-row: 1 / span 1;
-    grid-column: 1 / span 2;
-    width: 85%;
-    height: 30%;
-    justify-self: center;
-    margin: 4rem;
+    grid-column: 1 / span 1;
     background-color: rgb(196, 196, 196);
     border: 2px solid white;
     border-radius: 6px;
     font-size: 20px;
     color: black;
+    margin:1rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 
   }
 
   #searchUsers{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    width: 75%;
+    grid-row: 1 / span 1;
+    grid-column: 2 / span 1;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
-    justify-self: center;
-    margin-bottom: 8rem;
-    margin-left: 1rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
   }
 
-  #displayUsers{
+  #showDB{
     grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    width: 75%;
-    justify-self: center;
+    grid-column: 1 / span 2;
     font-size: 20px;
     background-color: rgb(94, 155, 169);
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
-    margin-bottom: 8rem;
-    margin-right: 1rem;
+    margin-bottom: 10rem;
+    margin-left: 1.2rem;
+    text-align: center;
   }
 
 }
