--- a/2800 web/public/css/login.css
+++ b/2800 web/public/css/login.css
@@ -107,14 +107,17 @@
     grid-row: 5 / span 1;
     grid-column: 2 / span 1;
     width: 80%;
-    margin-left: 1rem;
+    margin-left: .3rem;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
+    text-indent: 1cm;
+    text-decoration-line: none;
+    padding-top: 10%;
+    padding-left: 2%;
   }
-
 
 }
 
