Changed Logout button CSS and added montserrat font to CSS files
Changes by (MA)

--- a/2800 web/public/css/adminDash.css
+++ b/2800 web/public/css/adminDash.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+
 @media (min-width: 0px) and (max-width: 445px) {
 
   body {
@@ -77,6 +83,13 @@
     margin-right: 10%;
   }
 
+  #logoutButton{
+    background-color: black;
+    color:white;
+    font-size: 23px;
+    border: 1px solid black;
+  }
+
 }
 
 @media (min-width: 446px) {
@@ -151,6 +164,13 @@
     margin-bottom: 10rem;
     margin-left: 1.2rem;
     text-align: center;
+  }
+
+  #logoutButton{
+    background-color: black;
+    color:white;
+    font-size: 25px;
+    border: 1px solid black;
   }
 
 }
