--- a/2800 web/public/css/index.css
+++ b/2800 web/public/css/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+  font-family: 'Montserrat', sans-serif;
+}
 
 @media (min-width: 0px) and (max-width: 445px) {
 
@@ -225,6 +230,13 @@
     color:white;
   }
 
+  #logoutButton{
+    background-color: black;
+    color:white;
+    font-size: 23px;
+    border: 1px solid black;
+  }
+
 }
 
 @media (min-width: 446px) {
@@ -449,6 +461,13 @@
     margin-left: 19px;
     max-width:91%;
     color:white;
+  }
+
+  #logoutButton{
+    background-color: black;
+    color:white;
+    font-size: 23px;
+    border: 1px solid black;
   }
 
 }
