--- a/2800 web/public/css/login.css
+++ b/2800 web/public/css/login.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+
 @media (min-width: 0px) and (max-width: 445px) {
 
   body {
@@ -113,7 +119,7 @@
     border: 2px solid white;
     border-radius: 6px;
     color: white;
-    text-indent: 1cm;
+    text-indent: .8cm;
     text-decoration-line: none;
     padding-top: 10%;
     padding-left: 2%;
@@ -223,7 +229,7 @@
     color: white;
     text-indent: 1cm;
     text-decoration-line: none;
-    padding-top: 10%;
+    padding-top: 7.8%;
     padding-left: 2%;
   }
 
