--- a/2800 web/public/css/signUp.css
+++ b/2800 web/public/css/signUp.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+
+
 @media (min-width: 0px) and (max-width: 445px) {
 
   body {
