--- a/2800 web/public/css/adminDash.css
+++ b/2800 web/public/css/adminDash.css
@@ -10,6 +10,7 @@
     margin: 0px;
     padding: 0px;
     background-color: black;
+    color: white;
   }
 
   #container1{
@@ -98,6 +99,7 @@
     margin: 0px;
     padding: 0px;
     background-color: black;
+    color: white;
 
   }
 
