--- a/public/css/signUp.css
+++ b/public/css/signUp.css
@@ -43,7 +43,7 @@
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 25% 10% 25% 10% 15%;
+    grid-template-rows: 17% 2% 17% 2% 17% 2% 17% 2% 15%;
     /* grid-template-rows: 25% 10% 25% 1fr 15%; */
     grid-template-columns: 50% 50%;
     height: 50vh;
@@ -53,10 +53,11 @@
 
   #emailBox {
     grid-row: 1 / span 1;
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
     width: 85%;
     justify-self: center;
-    margin-top: 2rem;
+    margin-top: 1.7rem;
+    margin-bottom: .3rem;
     background-color: rgb(196, 196, 196);
     border: 2px solid white;
     border-radius: 6px;
@@ -66,7 +67,39 @@
 
   #passowrdBox {
     grid-row: 3 / span 1;
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
+    margin: 1rem;
+    font-size: 20px;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+  }
+
+  #createAccount {
+    color: white;
+  }
+
+  #firstNameBox{
+    grid-row: 5 / span 1;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
+    margin: 1rem;
+    font-size: 20px;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+  }
+
+  #lastNameBox{
+    grid-row: 7 / span 1;
+    grid-column: 1 / span 3;
     margin-bottom: 15px;
     width: 85%;
     justify-self: center;
@@ -79,17 +112,17 @@
   }
 
   #createButton{
-
-    grid-row: 5 / span 1;
+    grid-row: 9 / span 1;
     grid-column: 1 / span 2;
-    width: 86%;
+    width: 86.5%;
     margin-left: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: .2rem;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
-
   }
 
 }
@@ -133,7 +166,7 @@
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 25% 10% 25% 10% 15%;
+    grid-template-rows: 17% 2% 17% 2% 17% 2% 17% 2% 15%;
     grid-template-columns: 50% 50%;
     height: 50vh;
     background-color: rgba(0, 0, 0, 0.783);
@@ -146,7 +179,8 @@
     grid-column: 1 / span 3;
     width: 85%;
     justify-self: center;
-    margin-top: 2rem;
+    margin-top: 1.7rem;
+    margin-bottom: .3rem;
     background-color: rgb(196, 196, 196);
     border: 2px solid white;
     border-radius: 6px;
@@ -172,16 +206,44 @@
     color: white;
   }
 
-  #createButton{
+  #firstNameBox{
     grid-row: 5 / span 1;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
+    margin: 1rem;
+    font-size: 20px;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+  }
+
+  #lastNameBox{
+    grid-row: 7 / span 1;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
+    margin: 1rem;
+    font-size: 20px;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+  }
+
+  #createButton{
+    grid-row: 9 / span 1;
     grid-column: 1 / span 2;
     width: 86.5%;
     margin-left: 1.7rem;
+    margin-bottom: 1rem;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
   }
-
 }
