--- a/public/css/navbarFooter.css
+++ b/public/css/navbarFooter.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url(Montserrat-Regular.ttf);
+    src: url(../fonts/Montserrat-Regular.ttf);
 }
 
 nav {
-    background-color: black;
+    background-color:  rgba(76, 76, 76, 0.437);
     display: inline-block;
-    width: 99vw;
+    width: 100%;
     font-size: x-large;
     font-family: 'Montserrat', sans-serif;
     position: relative;
@@ -46,7 +46,23 @@ nav a {
     float: right;
 }
 
+#logoutButton{
+    float:right;
+}
+
 nav a:hover {
     background-color: grey;
     color: aliceblue;
+}
+
+#footer {
+
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(54, 54, 54, 0.437);
+    color:rgb(173, 173, 173);
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 1%;
 }
