--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -15,16 +15,15 @@
 
   #container1{
     display:grid;
-    grid-template-rows: 5% 95%;
+    grid-template-rows: 5% 30% 65%;
     grid-template-columns: 100%;
     height: 100vh;
   }
 
   #container2{
-    display: grid;
-    grid-template-rows: 5% 47% 47%;
-    grid-template-columns: 7% 94% 2%;
-    height: 100vh;
+
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
   }
 
   #search{
@@ -71,8 +70,7 @@
   }
 
   #showDB{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
+   
     width: 90%;
     font-size: 20px;
     background-color: rgb(94, 155, 169);
@@ -80,12 +78,20 @@
     border-radius: 6px;
     color: white;
     justify-self: center;
-    margin-bottom: 4.5rem;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
     margin-right: 10%;
+    margin-left: 5%;
+  }
+
+  #searchingPage{
+    color: white;
+    justify-items: center;
+    margin-left: 8rem;
   }
 
   #logoutButton{
-    background-color: black;
+    background-color: rgba(76, 76, 76, 0.437);
     color:white;
     font-size: 23px;
     border: 1px solid black;
@@ -169,7 +175,7 @@
   }
 
   #logoutButton{
-    background-color: black;
+    background-color: rgba(76, 76, 76, 0.437);
     color:white;
     font-size: 25px;
     border: 1px solid black;
