--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,16 +1,6 @@
-@font-face {
-    font-family: 'Montserrat';
-<<<<<<<< HEAD:public/css/navbarFooter.css
-    src: url(../fonts/Montserrat-Regular.ttf);
-}
-========
-    src: url(Montserrat-Regular.ttf);
-} */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-<<<<<<< HEAD
->>>>>>>> IH-TEST:public/css/navbar.css
-=======
->>>>>>> MA_CRUD_user_info
+
 
 *{
   font-family: 'Montserrat', sans-serif;
@@ -67,7 +57,7 @@ nav a:hover {
     color: aliceblue;
 }
 
-<<<<<<< HEAD
+
 #footer {
 
     bottom: 0;
@@ -79,11 +69,10 @@ nav a:hover {
     vertical-align: middle;
     padding-top: 1%;
 }
-=======
+
 #logoutButton{
-    background-color: black;
+    background-color: rgba(76, 76, 76, 0.437);
     color:white;
     font-size: 23px;
     border: 1px solid black;
   }
->>>>>>> MA_CRUD_user_info
