--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -189,6 +189,13 @@
     border-radius: 6px;
   }
 
+  #logoutButton{
+    background-color: rgba(76, 76, 76, 0.437);
+    color:white;
+    font-size: 23px;
+    border: 1px solid black;
+  }
+
 }
 
 @media (min-width: 446px) {
@@ -261,10 +268,6 @@
   #findImage{
 
     display:none;
-    /* grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    margin-top: 1.5rem;
-    color: white; */
   }
 
   .findImageStyle{
@@ -377,6 +380,13 @@
     color: white;
     border: 2px solid white;
     border-radius: 6px;
+  }
+
+  #logoutButton{
+    background-color: rgba(76, 76, 76, 0.437);
+    color:white;
+    font-size: 23px;
+    border: 1px solid black;
   }
 
   
