--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+* {
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -9,28 +9,28 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: #2C3333;
   }
 
-  #container1{
+  #container1 {
     display: grid;
     grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
 
-  #navbar{
+  #navbar {
     grid-row: 1 / span 1;
   }
 
-  #section{
+  #section {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 1fr 94% 1fr;
     height: 80vh;
   }
 
-  #container2{
+  #container2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display: grid;
@@ -43,198 +43,195 @@
     min-width: 280px;
   }
 
-  #solutionContainer{
+  #solutionContainer {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
-  #solutionBox{
+  #solutionBox {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     font-size: 20px;
-    margin-left: 2%; 
+    margin-left: 2%;
     text-align: center;
-    background-color: black;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: 17px;
-    max-width:92%;
-    color:white;
+    max-width: 92%;
+    color: #CDBE78;
   }
 
-  #buttonContainer{
-    display:grid;
+  #buttonContainer {
+    display: grid;
     grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 33% 33% 33%;
     grid-gap: .5rem;
   }
 
-  #button1{
+  #button1 {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
+    background-color: #2C3333;
     color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    /* background-color: rgba(79, 79, 79, 0.819);
-    color: white; */
-
   }
 
-  #button2{
+  #button2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button3{
+  #button3 {
     grid-row: 1 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button4{
+  #button4 {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
 
   }
 
-  #button5{
+  #button5 {
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button6{
+  #button6 {
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #plus{
+  #plus {
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #minus{
+  #minus {
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 50px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #multiply{
+  #multiply {
     grid-row: 3 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #divide{
+  #divide {
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #openBracket{
+  #openBracket {
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #closeBracket{
+  #closeBracket {
     grid-row: 4 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-  } 
+  }
 
-  #submitContainer{
+  #submitContainer {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
-  #enterButton{
+  #enterButton {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     font-size: 20px;
-    margin-left: 2%; 
+    margin-left: 2%;
     text-align: center;
-    background-color: rgba(90, 90, 90, 0.819);
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     margin-top: 30px;
     margin-bottom: 10px;
     margin-left: 17px;
-    max-width:94%;
-    color:white;
+    max-width: 94%;
+    color: #CDBE78;
   }
 
-  #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+  #logoutButton {
+    background-color: #066163;
+    color: #CDBE78;
     font-size: 23px;
-    border: 1px solid black;
+    border: #066163;
   }
 
 }
@@ -244,28 +241,28 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: #2C3333;
   }
 
-  #container1{
+  #container1 {
     display: grid;
     grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
 
-  #navbar{
+  #navbar {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
   }
 
-  #section{
+  #section {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 1fr 410px 1fr;
   }
 
-  #container2{
+  #container2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display: grid;
@@ -278,196 +275,198 @@
     min-width: 409px;
   }
 
-  #solutionContainer{
+  #solutionContainer {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
-  #solutionBox{
+  #solutionBox {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     /* margin: 1rem; */
     font-size: 20px;
     text-align: center;
-    background-color: black;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
+    color: #CDBE78;
     border-radius: 6px;
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: 12px;
-    max-width:90%;
+    max-width: 90%;
   }
 
-  #buttonContainer{
-    display:grid;
+  #buttonContainer {
+    display: grid;
     grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 33% 33% 33%;
     /* grid-gap: .5rem; */
   }
 
-  #button1{
+  #button1 {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     /* background-color: rgba(79, 79, 79, 0.819);
     color: white; */
 
   }
 
-  #button2{
+  #button2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button3{
+  #button3 {
     grid-row: 1 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button4{
+  #button4 {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
 
   }
 
-  #button5{
+  #button5 {
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #button6{
+  #button6 {
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
-  #plus{
+
+  #plus {
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #minus{
+  #minus {
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 50px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #multiply{
+  #multiply {
     grid-row: 3 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #divide{
+  #divide {
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #openBracket{
+  #openBracket {
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
-  #closeBracket{
+  #closeBracket {
     grid-row: 4 / span 1;
     grid-column: 3 / span 1;
     margin: 1rem;
     font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #2C3333;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-  } 
+  }
 
-  #submitContainer{
+  #submitContainer {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 100%;
   }
 
-  #enterButton{
+  #enterButton {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     font-size: 20px;
-    margin-left: 2%; 
+    margin-left: 2%;
     text-align: center;
-    background-color: rgba(90, 90, 90, 0.819);
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: #066163;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     margin-top: 30px;
     margin-bottom: 10px;
     margin-left: 19px;
-    max-width:91%;
-    color:white;
+    max-width: 91%;
+    color: #CDBE78;
   }
 
-  #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+  #logoutButton {
+    background-color: #066163;
+    color: #CDBE78;
     font-size: 23px;
-    border: 1px solid black;
+    border: #066163;
   }
 
 }
