--- a/public/css/login.css
+++ b/public/css/login.css
@@ -42,64 +42,74 @@
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 17% 2% 17% 2% 17% 2% 17% 2% 15%;
-    /* grid-template-rows: 25% 10% 25% 1fr 15%; */
     grid-template-columns: 50% 50%;
+    grid-template-rows: 17% 2% 17% 2% 17% 2% 17% 2% 15%;
     height: 50vh;
     background-color: rgba(0, 0, 0, 0.783);
     border-radius: 6px;;
   }
 
+  #container3L {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 33.33% 33.33% 9% 20.33% 4%;
+    height: 35vh;
+    background-color: rgba(0, 0, 0, 0.783);
+    border-radius: 6px;;
+  }
+
   #emailBox {
-    grid-row: 1 / span 1;
     grid-column: 1 / span 2;
+    grid-row: 1 / span 1;
     width: 85%;
     justify-self: center;
     margin-top: 2rem;
-    background-color: rgb(196, 196, 196);
-    border: 2px solid white;
+    background-color: #F2F2F2;
+    border: 2px solid #F2F2F2;
     border-radius: 6px;
     font-size: 20px;
     color: black;
   }
 
   #passowrdBox {
-    grid-row: 3 / span 1;
     grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
     margin-bottom: 15px;
     width: 85%;
     justify-self: center;
     margin: 1rem;
     font-size: 20px;
-    background-color: rgb(196, 196, 196);
-    border: 2px solid white;
+    background-color: #F2F2F2;
+    border: 2px solid #F2F2F2;
     border-radius: 6px;
     color: black;
   }
 
 
   #signInButton {
-    grid-row: 5 / span 1;
-    grid-column: 1 / span 1;
+    grid-column: 1;
+    grid-row: 4 ;
     width: 80%;
     margin-left: 1.5rem;
     font-size: 20px;
-    background-color: rgb(94, 155, 169);
-    border: 2px solid white;
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    color: white;
+    color: #CDBE78;
   }
 
   #signUpButton {
-    grid-row: 5 / span 1;
-    grid-column: 2 / span 1;
+    grid-column: 2;
+    grid-row: 4;
     width: 80%;
     margin-left: .3rem;
     font-size: 20px;
-    background-color: rgb(107, 169, 94);
-    border: 2px solid white;
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    color: white;
+    color: #CDBE78;
     text-indent: .8cm;
     text-decoration-line: none;
     padding-top: 10%;
@@ -143,7 +153,7 @@
     min-width: 409px;
   }
 
-  #container3 {
+  #container3L {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     display: grid;
@@ -161,8 +171,8 @@
     width: 85%;
     justify-self: center;
     margin-top: 2rem;
-    background-color: rgb(196, 196, 196);
-    border: 2px solid white;
+    background-color: #F2F2F2;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     font-size: 20px;
     color: black;
@@ -176,8 +186,8 @@
     justify-self: center;
     margin: 1rem;
     font-size: 20px;
-    background-color: rgb(196, 196, 196);
-    border: 2px solid white;
+    background-color: #F2F2F2;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
     color: black;
   }
@@ -192,10 +202,10 @@
     width: 80%;
     margin-left: 1.5rem;
     font-size: 20px;
-    background-color: rgb(94, 155, 169);
-    border: 2px solid white;
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    color: white;
+    color: #CDBE78;
   }
 
   #signUpButton {
@@ -204,10 +214,10 @@
     width: 80%;
     margin-left: 1rem;
     font-size: 20px;
-    background-color: rgb(107, 169, 94);
-    border: 2px solid white;
+    background-color: #2C3333;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    color: white;
+    color: #CDBE78;
     text-indent: 1cm;
     text-decoration-line: none;
     padding-top: 7.8%;
@@ -221,9 +231,9 @@
     margin-left: 1rem;
     font-size: 20px;
     background-color: rgb(107, 169, 94);
-    border: 2px solid white;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    color: white;
+    color: #CDBE78;
     text-align: center;
   }
 
