--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -9,7 +9,7 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: #2C3333;
   }
 
   #container1{
@@ -44,7 +44,7 @@
   #welcome{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
+    color: #CDBE78;
     font-size: 12px;
     
   }
@@ -61,7 +61,7 @@
     object-position: center; 
     border-radius: 10px;
     padding: 1rem;
-    border: 3px solid rgba(90, 90, 90, 0.819);
+    border: 3px solid #CDBE78;
   }
 
   #imageUpload{
@@ -73,16 +73,15 @@
   }
 
   #findImage{
-
     display:none;
-
   }
 
   .findImageStyle{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
+    background-color: #0b2d2e;
     border-radius: 6px;
     padding-top: 5%;
     padding-left: 2%;
@@ -97,9 +96,9 @@
     grid-column: 2 / span 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
     border-radius: 6px;
     margin-left: .5rem;
   }
@@ -108,7 +107,7 @@
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     border-radius: 6px;
-    border: .5px solid grey;
+    border: .5px solid #CDBE78;
   }
 
   #buttonForm{
@@ -123,18 +122,18 @@
   #userFirstName{
     grid-row: 1 / span 1;
     grid-column: 1 / span 2;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
   }
 
   #userLastName{
     grid-row: 2 / span 1;
     grid-column: 1 / span 2;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -142,9 +141,9 @@
   #userEmail{
     grid-row: 3 / span 1;
     grid-column: 1 / span 2;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -152,9 +151,9 @@
   #userPassword{
     grid-column: 1 / span 2;
     grid-row: 4 / span 1;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -162,9 +161,9 @@
   #saveButton{
     grid-column: 1 / span 2;
     grid-row: 5 / span 1;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
     border-radius: 6px;
   }
 
@@ -183,17 +182,17 @@
     margin-bottom: 1rem;
     margin-left: .5rem;
     margin-right: .5rem;
-    background-color: rgba(90, 146, 180, 0.735);
-    color: white;
-    border: 2px solid white;
+    background-color: #066163;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
   #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+    background-color: #066163;
+    color:#CDBE78;
     font-size: 23px;
-    border: 1px solid black;
+    border: 1px solid #066163;
   }
 
 }
@@ -203,7 +202,7 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: #2C3333;
   }
 
   #container1{
@@ -237,7 +236,7 @@
   #welcome{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white
+    color: #CDBE78;
     
   }
 
@@ -254,7 +253,7 @@
     object-position: center; 
     border-radius: 10px;
     padding: 1rem;
-    border: 3px solid rgba(90, 90, 90, 0.819);
+    border: 3px solid #CDBE78;
   }
 
   #imageUpload{
@@ -273,8 +272,9 @@
   .findImageStyle{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
+    background-color: #0b2d2e;
     border-radius: 6px;
     padding-top: 3%;
     padding-left: 2%;
@@ -289,9 +289,9 @@
     grid-column: 2 / span 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
     border-radius: 6px;
     margin-left: .5rem;
     
@@ -301,7 +301,7 @@
     grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     border-radius: 6px;
-    border: .5px solid grey;
+    border: .5px solid #CDBE78;
   }
 
   #buttonForm{
@@ -316,18 +316,18 @@
   #userFirstName{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
   }
 
   #userLastName{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -335,9 +335,9 @@
   #userEmail{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -345,9 +345,9 @@
   #userPassword{
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
-    background-color: black;
-    color: white;
-    border: 1px solid rgba(90, 90, 90, 0.819);
+    background-color: #F2F2F2;
+    color: black;
+    border: 1px solid #2C3333;
     border-radius: 6px;
 
   }
@@ -355,9 +355,9 @@
   #saveButton{
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
     border-radius: 6px;
   }
 
@@ -376,17 +376,17 @@
     margin-bottom: 1rem;
     margin-left: .5rem;
     margin-right: .5rem;
-    background-color: rgba(90, 146, 180, 0.735);
-    color: white;
-    border: 2px solid white;
+    background-color: #066163;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
   #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+    background-color: #066163;
+    color:#CDBE78;
     font-size: 23px;
-    border: 1px solid black;
+    border: 1px solid #066163;
   }
 
   
