Fixed a small CSS issue for userProfilePage

--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -205,7 +205,7 @@
 
   #container2{
     display: grid;
-    grid-template-rows: 85% 1fr;
+    grid-template-rows: 800px 1fr;
     grid-template-columns: 1fr 40% 1fr;
   }
 
