--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -21,7 +21,6 @@
   }
 
   #container2 {
-
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
   }
@@ -174,6 +173,7 @@
     grid-row: 4;
     grid-template-columns: 100%;
     grid-template-rows: 33.33% 33.33% 33.33% 33.33% 33.33%;
+    margin-bottom: 10%;
   }
 
   .email {
