--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -10,6 +10,7 @@
     margin: 0px;
     padding: 0px;
     background-color: #2C3333;
+    color: #CDBE78;
   }
 
   #container1{
@@ -53,7 +54,7 @@
     object-fit: cover;
     border-radius: 10px;
     padding: 1rem;
-    border: 3px solid rgba(90, 90, 90, 0.819);
+    border: 2px solid #CDBE78;
   }
 
   #imageContainer{
@@ -68,14 +69,14 @@
     object-fit: cover;
     border-radius: 10px;
     padding: 1rem;
-    border: 3px solid #CDBE78;
+    border: 2px solid #CDBE78;
   }
 
   #userFields{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     border-radius: 6px;
-    border: .5px solid grey;
+    border: 2px solid #CDBE78;
 
   }
 
@@ -96,13 +97,21 @@
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     color: #CDBE78;
-    border: 1px solid #CDBE78;
+    border: 2px solid #CDBE78;
     background-color: #0b2d2e;
     border-radius: 6px;
     padding-top: 5%;
     text-align: center;
   }
 
+  #submitPost{
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
+    border-radius: 6px;
+    margin-bottom: 2%;
+    margin-top: 3%;
+  }
 
   #userFirstName{
     grid-row: 2 / span 1;
@@ -148,7 +157,7 @@
     grid-row: 6 / span 1;
     background-color: #0b2d2e;
     color: #CDBE78;
-    border: 1px solid #CDBE78;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
   }
 
@@ -179,6 +188,10 @@
     padding-left: 20px;
   }
 
+  #timeline{
+    margin-bottom: 5%;
+  }
+
   textarea{
     max-width:90%;
   }
@@ -198,6 +211,7 @@
     margin: 0px;
     padding: 0px;
     background-color: #2C3333;
+    color: #CDBE78;
   }
 
   #container1{
@@ -242,7 +256,7 @@
     object-fit: cover;
     border-radius: 10px;
     padding: 1rem;
-    border: 3px solid rgba(90, 90, 90, 0.819);
+    border: 3px solid #CDBE78;
   }
 
   #imageContainer{
@@ -264,7 +278,7 @@
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     border-radius: 6px;
-    border: .5px solid grey;
+    border: 2px solid #CDBE78;
     max-width:91.5%;
     min-width:90%;
   }
@@ -365,6 +379,21 @@
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     padding-left: 20px;
+    /* margin-bottom: 10%; */
+    margin-top: 10%;
+  }
+
+  #timeline{
+    margin-bottom: 5%;
+  }
+
+  #submitPost{
+    background-color: #0b2d2e;
+    color: #CDBE78;
+    border: 2px solid #CDBE78;
+    border-radius: 6px;
+    margin-bottom: 2%;
+    margin-top: 3%;
   }
 
   #logoutButton{
@@ -380,10 +409,10 @@
 
   #logoutButton{
     float:right;
-    background-color: rgba(174, 174, 174, 0.437);
-    color:white;
+    background-color: #066163;
+    color: #CDBE78;
     font-size: 23px;
-    border:none;
+    border: #066163;
   }
   
 }
