--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -186,6 +186,7 @@
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     padding-left: 20px;
+    margin-bottom: 5%;
   }
 
   #timeline{
@@ -379,8 +380,7 @@
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     padding-left: 20px;
-    /* margin-bottom: 10%; */
-    margin-top: 10%;
+    margin-top: 20%;
   }
 
   #timeline{
